After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 700088 - compile failure: 'wayland_surface' has incomplete type
compile failure: 'wayland_surface' has incomplete type
Status: RESOLVED FIXED
Product: cogl
Classification: Platform
Component: Wayland
1.14.x
Other Linux
: Normal blocker
: ---
Assigned To: Cogl maintainer(s)
Cogl maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-05-10 15:52 UTC by U. Artie Eoff
Modified: 2013-05-13 17:37 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
cogland: Embed the wl_surface struct directly into CoglandSurface (2.57 KB, patch)
2013-05-13 14:50 UTC, Neil Roberts
accepted-commit_now Details | Review

Description U. Artie Eoff 2013-05-10 15:52:42 UTC
./autogen.sh --prefix="$WLD/install" --enable-wayland-egl-platform --enable-gles2 --enable-wayland-egl-server --disable-introspection --disable-gtk-doc

produces the following compilation error:

cogland.c:28:21: error: field ‘wayland_surface’ has incomplete type


Software Stack
--------------
wayland (master) heads/master-0-g508dd69
fontconfig (master) heads/master-0-gf6244d2
drm (master) heads/master-0-g040f6b0
mesa (master) heads/master-0-ga8e4614
libxkbcommon (master) heads/master-0-ga392d26
pixman (master) heads/master-0-gd701419
cairo (master) heads/master-0-g1704292
weston (master) heads/master-0-g7b9195f
cogl (cogl-1.14) heads/cogl-1.14-0-gb9d899f
Comment 1 Neil Roberts 2013-05-13 14:50:08 UTC
Created attachment 244038 [details] [review]
cogland: Embed the wl_surface struct directly into CoglandSurface

The wl_surface struct has been removed from libwayland-server so
instead we can just embed its only memeber, the resource, directly
into CoglandSurface.

http://cgit.freedesktop.org/wayland/wayland/commit/?id=508dd69b5654
Comment 2 Robert Bragg 2013-05-13 16:24:20 UTC
Review of attachment 244038 [details] [review]:

This patch looks good to land to me:

Reviewed-by: Robert Bragg <robert@linux.intel.com>
Comment 3 Neil Roberts 2013-05-13 16:34:57 UTC
Ok, I've pushed the patch to master and the 1.16 branch. Thanks for the report and the review.
Comment 4 U. Artie Eoff 2013-05-13 17:37:16 UTC
(In reply to comment #3)
> Ok, I've pushed the patch to master and the 1.16 branch. Thanks for the report
> and the review.

Thanks for the fix.  So is the 1.14 branch no longer used for active wayland development?